# ionpak

./: .gitignore  README.md
.cargo/: config
firmware/: Cargo.toml  build.rs  memory.x  openocd.cfg
firmware/src/: board.rs  config.rs  eeprom.rs  electrometer.rs  ethmac.rs  firmware.html  http.rs  index.html  loop_anode.rs  loop_cathode.rs  main.rs  network_settings.html  pages.rs  pid.rs
firmware/support/: load.gdb  openocd.cfg
hardware/: assembly.md  errata.md  shopping.md
hardware/mechanical/: Ionpak_1U_v5b.dxf  Ionpak_1U_v5b1.dxf
hardware/rev1/: ionpak_bom_rev1.xls
hardware/rev1/gerber/: IONPAK1-B.Cu.gbr  IONPAK1-B.Mask.gbr  IONPAK1-B.SilkS.gbr  IONPAK1-F.Cu.gbr  IONPAK1-F.Mask.gbr  IONPAK1-F.SilkS.gbr  IONPAK1-In1.Cu.gbr  IONPAK1-In2.Cu.gbr  IONPAK1-Margin.gbr  IONPAK1-NPTH-drl_map.gbr  IONPAK1-NPTH.drl  IONPAK1-drl_map.gbr  IONPAK1.drl
hardware/rev1/kicad/: IONPAK1-cache.lib  IONPAK1.kicad_pcb  IONPAK1.net  IONPAK1.sch  ionpak.lib
hardware/rev1/kicad/proj_footprints.pretty/: 3mm_EARTH.kicad_mod  6-SMD.kicad_mod  BOURNS-GDT-2051.kicad_mod  BOURNS-GDT-2051_ns.kicad_mod  COTO-9001_ns.kicad_mod  C_1206_ns.kicad_mod  DO-214AB.kicad_mod  DPAK.kicad_mod  PhoenixContact_1786417_03.kicad_mod  Pin_Header_Straight_2x05_Pitch1.27mm.kicad_mod  SC-90A.kicad_mod  SC70-5.kicad_mod  SOIC-8.kicad_mod  SOT-223.kicad_mod  (+4 more)
hardware/rev2/: ionpak_bom_rev2.xls
hardware/rev2/gerber/: IONPAK2-B.Cu.gbr  IONPAK2-B.Mask.gbr  IONPAK2-F.Cu.gbr  IONPAK2-F.Mask.gbr  IONPAK2-F.Paste.gbr  IONPAK2-F.SilkS.gbr  IONPAK2-In1.Cu.gbr  IONPAK2-In2.Cu.gbr  IONPAK2-Margin.gbr  IONPAK2-NPTH.drl  IONPAK2.drl
hardware/rev2/kicad/: IONPAK2-cache.lib  IONPAK2.kicad_pcb  IONPAK2.net  IONPAK2.pro  IONPAK2.sch  ionpak.lib
src/: main.rs
(+25 files in other folders)
