[package]
name = "ionpak-firmware"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]

[build-dependencies]
walkdir = "1.0"

[dependencies]
cortex-m = "0.3.1"
cortex-m-rt = { version = "0.3.5" }

[dependencies.tm4c129x]
git = "https://github.com/m-labs/dslite2svd"
rev = "d527f3f"
features = ["rt"]

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp"
rev = "14355e1"
features = []
default-features = false

[profile.release]
lto = true
debug = true
