[package]
name = "ionpak-firmware"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]

[build-dependencies]
walkdir = "1.0"

[dependencies]
cortex-m = "0.3"
cortex-m-rt = "0.3"
crc = { version = "1.7", default-features = false }

[dependencies.tm4c129x]
git = "https://github.com/m-labs/dslite2svd"
rev = "d527f3f"
features = ["rt"]

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp"
rev = "cd893e6"
features = ["proto-ipv4", "socket-tcp"]
default-features = false

[profile.release]
lto = true
debug = true
