[package]
name = "ionpak-firmware"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]

[build-dependencies]
walkdir = "1.0"

[dependencies]
libm = "0.1.2"
cortex-m = { version = "0.5", features = ["const-fn"] }
cortex-m-rt = "0.5"
crc = { version = "1.7", default-features = false }
tm4c129x = { version = "0.7", features = ["rt"] }

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp"
rev = "cd893e6"
features = ["proto-ipv4", "socket-tcp"]
default-features = false

[profile.release]
lto = true
debug = true
